Agentforce/force-app/main/default/objects/Appeal__c/fields/Active_Duration__c.field-meta.xml
<CustomField>
    <fullName>Active_Duration__c</fullName>
    <formula>IF(ISBLANK(Close_Date__c),TODAY(),Close_Date__c)-Appeal_Received__c</formula>
    <inlineHelpText>The Active Duration of the Appeal in Days</inlineHelpText>
    <label>Active Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>