Agentforce/force-app/main/default/objects/Appeal__c/fields/Appeal_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Manager_Email__c</fullName>
    <label>Appeal Manager Email</label>
    <type>Email</type>
</CustomField>