Agentforce/force-app/main/default/objects/Appeal__c/fields/Appeal_Manager_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Manager_First_Name__c</fullName>
    <label>Appeal Manager First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>