Agentforce/force-app/main/default/objects/Appeal__c/fields/Appeal_Manager_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Manager_Last_Name__c</fullName>
    <label>Appeal Manager Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>