Agentforce/force-app/main/default/objects/Appeal__c/fields/Appeal_Received__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Received__c</fullName>
    <label>Appeal Received</label>
    <type>Date</type>
</CustomField>