Agentforce/force-app/main/default/objects/Appeal__c/fields/Closure_Details__c.field-meta.xml
<CustomField>
    <fullName>Closure_Details__c</fullName>
    <label>Closure Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>