Agentforce/force-app/main/default/objects/Appeal__c/fields/Days_Received_After_Case_Closure__c.field-meta.xml
<CustomField>
    <fullName>Days_Received_After_Case_Closure__c</fullName>
    <formula>Appeal_Received__c - Case__r.Initial_Closure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Received After Case Closure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>