Agentforce/force-app/main/default/objects/Appeal__c/validationRules/Appeal_Received_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Appeal_Received_Date</fullName>
    <active>true</active>
    <description>Appeal cannot be received in the future.</description>
    <errorConditionFormula>Appeal_Received__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Appeal_Received__c</errorDisplayField>
    <errorMessage>The Appeal Received date cannot be in the future. Please choose a different date.</errorMessage>
</ValidationRule>