Agentforce/force-app/main/default/objects/Appeal__c/validationRules/Close_Date_After_Received_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_After_Received_Date</fullName>
    <active>true</active>
    <description>Close Date must be after Appeal Received Date</description>
    <errorConditionFormula>Close_Date__c &lt; Appeal_Received__c</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Close Date must be after Appeal Received Date</errorMessage>
</ValidationRule>