Agentforce/force-app/main/default/objects/Appeal__c/validationRules/Close_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Not_Future</fullName>
    <active>true</active>
    <description>Close Date cannot be in the future</description>
    <errorConditionFormula>Close_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Close Date cannot be in the future.</errorMessage>
</ValidationRule>