Agentforce/force-app/main/default/objects/Appeal__c/validationRules/Close_Info_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Info_Completed</fullName>
    <active>true</active>
    <description>Close Date and Outcome must be provided for Closed Appeals</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Status__c,&quot;Closed&quot;),
				OR(
								ISBLANK(Close_Date__c),
								TEXT(Outcome__c) = NULL,
								ISBLANK(Closure_Details__c)  
				)
				)</errorConditionFormula>
    <errorMessage>Close Date, Outcome and Closure Details must be completed for Closed Appeals</errorMessage>
</ValidationRule>